--- a/scss/layouts/_layouts.scss
+++ b/scss/layouts/_layouts.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     box-shadow: 0 1px 6px $box-shadow;
-    @media screen and (min-width: 768px){
+    @media screen and (min-width: 992px){
         justify-content: flex-start;
     }
     &__logo{
@@ -39,12 +39,18 @@
         align-items: center;
         padding: 3em 1.5em;
         text-align: center;
+        @media screen and (min-width: 768px){
+            align-items: flex-start;
+        }
         &-title{
             font-size: 1.8em;
         }
         &-paragraph{
             padding: 1em;
             font-size: 1.3em;
+            @media screen and (min-width: 768px){
+                padding-left: 0;
+            }
         }
         &-btn{
             margin: 1em;
@@ -56,6 +62,9 @@
             width: max-content;
             background: linear-gradient(#ea72da, #a95ddc);
             box-shadow: 0 3px 5px $box-shadow;
+            @media screen and (min-width: 768px){
+                margin-left: 0;
+            }
             &:hover{
                 cursor: pointer;
             }
@@ -117,6 +126,41 @@
             }
             &--darken{
                 background-color: #f5edff;
+            }
+        }
+    }
+}
+
+.resto{
+    background-color: $bg;
+    padding: 3em 1.5em;
+    &__title{
+        font-size: 1.8em;
+    }
+    &__list{
+        margin-top: 2em;
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 2em;
+        row-gap: 2em;
+    }
+}
+
+.footer{
+    background-color: #353535;
+    padding: 2em 1.5em;
+    &__logo{
+        width: 9em;
+    }
+    &__list{
+        margin-top: 1em;
+        &-link{
+            color: white;
+            font-size: 1.3em;
+            line-height: 1.7;
+            &-icon{
+                margin-right: 1em;
+                width: .5em;
             }
         }
     }
