--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -6,7 +6,7 @@
     padding: 0;
     border: 0;
     font-style: normal;
-    font-family: Raleway, sans-serif;
+    font-family: Roboto, sans-serif;
 }
 
 html{
@@ -44,7 +44,7 @@ button{
 }
 
 .medium{
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .bold{
@@ -52,5 +52,5 @@ button{
 }
 
 .extra-bold{
-    font-weight: 800;
+    font-weight: 900;
 }
