--- a/scss/components/_components.scss
+++ b/scss/components/_components.scss
@@ -1,4 +1,5 @@
 .card{
+    position: relative;
     flex: 1 0 45%;
     min-width: 21em;
     height: 20em;
@@ -36,19 +37,6 @@
                     font-size: 1.3em;
                 }
             }
-            &-heart{
-                position: relative;
-                bottom: .2em;
-                color: #3d3d3d;
-                font-size: 2em;
-                margin-right: 1em;
-                &--inside{
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    display: none;
-                }
-            }
         }
         &-new{
             position: absolute;
@@ -58,6 +46,39 @@
             color: #008766;
             padding: .5em .8em;
             font-size: 1.2em;
+        }
+    }
+    &__heart{
+        position: absolute;
+        bottom: 1em;
+        right: 1em;
+        font-size: 2em;
+        width: 1em;
+        height: 1em;
+        cursor: pointer;
+        &--outside{
+            z-index: 1;
+            position: absolute;
+            top: 0;
+            left: 0;
+            color: #3d3d3d;
+            transition: opacity 200ms ease-in-out;
+            &:hover{
+                opacity: 0;
+                & + i{
+                    opacity: 1;
+                }
+            }
+        }
+        &--inside{
+            opacity: 0;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background: linear-gradient($color-primary, $color-secondary);
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            transition: opacity 200ms ease-in-out;
         }
     }
 }
