--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import "utils/_variables";
 @import "utils/_mixins";
+@import "utils/_keyframes";
 @import "base/_base";
 @import "components/_components";
 @import "layouts/_layouts";
