--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,26 @@
 @charset "UTF-8";
+@-webkit-keyframes check-rotation {
+  0% {
+    transform: rotate(90deg);
+  }
+  40% {
+    transform: rotate(90deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes check-rotation {
+  0% {
+    transform: rotate(90deg);
+  }
+  40% {
+    transform: rotate(90deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 /*-- Propriétés générales --*/
 * {
   box-sizing: border-box;
@@ -24,7 +46,7 @@ body {
 }
 
 h1, h2, h3, h4 {
-  font-weight: bold;
+  font-weight: normal;
   line-height: 1.2;
 }
 
@@ -55,6 +77,33 @@ button {
 
 .extra-bold {
   font-weight: 900;
+}
+
+.btn {
+  margin: 1em;
+  font-size: 1.1em;
+  color: white;
+  border-radius: 2.5em;
+  padding: 1em 1.5em;
+  display: block;
+  text-align: center;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  background: linear-gradient(#FF79DA, #9356DC);
+  box-shadow: 0 3px 5px #b8b8b8;
+}
+@media screen and (min-width: 768px) {
+  .btn {
+    margin-left: 0;
+  }
+}
+.btn:hover {
+  cursor: pointer;
+}
+.btn--menu {
+  margin: 3em auto 1em;
+  width: 11em;
 }
 
 .card {
@@ -111,7 +160,8 @@ button {
   padding: 0.5em 0.8em;
   font-size: 1.2em;
 }
-.card__heart {
+
+.heart {
   position: absolute;
   bottom: 1em;
   right: 1em;
@@ -120,7 +170,13 @@ button {
   height: 1em;
   cursor: pointer;
 }
-.card__heart--outside {
+.heart--menu {
+  position: relative;
+  bottom: 0;
+  right: 0;
+  margin-right: 1em;
+}
+.heart-outside {
   z-index: 1;
   position: absolute;
   top: 0;
@@ -128,13 +184,13 @@ button {
   color: #3d3d3d;
   transition: opacity 200ms ease-in-out;
 }
-.card__heart--outside:hover {
+.heart-outside:hover {
   opacity: 0;
 }
-.card__heart--outside:hover + i {
+.heart-outside:hover + i {
   opacity: 1;
 }
-.card__heart--inside {
+.heart-inside {
   opacity: 0;
   position: absolute;
   top: 0;
@@ -153,14 +209,15 @@ button {
   justify-content: center;
   box-shadow: 0 1px 6px #b8b8b8;
 }
-@media screen and (min-width: 992px) {
-  .header {
-    justify-content: flex-start;
-  }
-}
 .header__logo {
-  margin: 1.5em;
+  margin: 1.5em 1.5em 1em 1.5em;
   width: 15em;
+}
+.header__return-icon {
+  font-size: 1.8em;
+  position: absolute;
+  left: 1em;
+  top: calc(50% - .4em);
 }
 
 .nav__location {
@@ -206,27 +263,6 @@ button {
   .nav__header-paragraph {
     padding-left: 0;
   }
-}
-.nav__header-btn {
-  margin: 1em;
-  font-size: 1.1em;
-  color: white;
-  border-radius: 2.5em;
-  padding: 1em 1.5em;
-  display: block;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  background: linear-gradient(#FF79DA, #9356DC);
-  box-shadow: 0 3px 5px #b8b8b8;
-}
-@media screen and (min-width: 768px) {
-  .nav__header-btn {
-    margin-left: 0;
-  }
-}
-.nav__header-btn:hover {
-  cursor: pointer;
 }
 .nav__function {
   padding: 3em 1.5em;
@@ -328,4 +364,106 @@ button {
 .footer__list-link-icon {
   margin-right: 1em;
   width: 0.5em;
+}
+
+.menu__img {
+  width: 100%;
+  height: 20em;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.menu__shop {
+  position: relative;
+  bottom: 4em;
+  margin-bottom: -4em;
+  padding: 2.5em 1em;
+  background: #f6f6f6;
+  border-radius: 2.5em 2.5em 0 0;
+}
+
+.shop-title {
+  display: flex;
+  justify-content: space-between;
+}
+.shop-title__text {
+  font-family: "Shrikhand", cursive;
+  font-size: 2em;
+  padding-left: 0.2em;
+}
+
+.shop-group {
+  margin-top: 2.5em;
+}
+.shop-group__title {
+  color: #3d3d3d;
+  font-size: 1.2em;
+}
+.shop-group__line {
+  background: #99E2D0;
+  height: 0.25em;
+  width: 3em;
+  margin-top: 0.3em;
+}
+.shop-group__list {
+  margin-top: 1.3em;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 1em;
+  -moz-column-gap: 1em;
+       column-gap: 1em;
+}
+
+.shop-card {
+  flex: 1 0 40%;
+  min-width: 20em;
+  background: white;
+  border-radius: 1em;
+  box-shadow: 0 2px 10px #d2d2d2;
+  overflow: hidden;
+  display: flex;
+}
+.shop-card:hover {
+  cursor: pointer;
+}
+.shop-card:hover > .shop-card__text {
+  min-width: calc(100% - 11em);
+}
+.shop-card:hover .shop-card__check-icon {
+  -webkit-animation: check-rotation 450ms ease-in-out;
+          animation: check-rotation 450ms ease-in-out;
+}
+.shop-card__text {
+  min-width: calc(100% - 6em);
+  margin: 1em 0 1em 1em;
+  overflow: hidden;
+  white-space: nowrap;
+  transition: min-width 450ms ease-in-out;
+}
+.shop-card__text-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 1.2em;
+}
+.shop-card__text-info {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-top: 0.5em;
+}
+.shop-card__price {
+  display: block;
+  font-size: 1.2em;
+  align-self: flex-end;
+  padding: 0 1.5em 0.7em 1em;
+}
+.shop-card__check {
+  min-width: 5em;
+  background: #99E2D0;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.shop-card__check-icon {
+  transition: transform 500ms ease-in-out;
+  font-size: 1.5em;
 }/*# sourceMappingURL=style.css.map */
