--- a/scss/components/_components.scss
+++ b/scss/components/_components.scss
@@ -1,3 +1,26 @@
+.btn{
+    margin: 1em;
+    font-size: 1.1em;
+    color: white;
+    border-radius: 2.5em;
+    padding: 1em 1.5em;
+    display: block;
+    text-align: center;
+    width: max-content;
+    background: linear-gradient($color-secondary, $color-primary);
+    box-shadow: 0 3px 5px $box-shadow;
+    @media screen and (min-width: 768px){
+        margin-left: 0;
+    }
+    &:hover{
+        cursor: pointer;
+    }
+    &--menu{
+        margin: 3em auto 1em;
+        width: 11em;
+    }
+}
+
 .card{
     position: relative;
     flex: 1 0 45%;
@@ -48,37 +71,44 @@
             font-size: 1.2em;
         }
     }
-    &__heart{
+}
+
+.heart{
+    position: absolute;
+    bottom: 1em;
+    right: 1em;
+    font-size: 2em;
+    width: 1em;
+    height: 1em;
+    cursor: pointer;
+    &--menu{
+        position: relative;
+        bottom: 0;
+        right: 0;
+        margin-right: 1em;
+    }
+    &-outside{
+        z-index: 1;
         position: absolute;
-        bottom: 1em;
-        right: 1em;
-        font-size: 2em;
-        width: 1em;
-        height: 1em;
-        cursor: pointer;
-        &--outside{
-            z-index: 1;
-            position: absolute;
-            top: 0;
-            left: 0;
-            color: #3d3d3d;
-            transition: opacity 200ms ease-in-out;
-            &:hover{
-                opacity: 0;
-                & + i{
-                    opacity: 1;
-                }
+        top: 0;
+        left: 0;
+        color: #3d3d3d;
+        transition: opacity 200ms ease-in-out;
+        &:hover{
+            opacity: 0;
+            & + i{
+                opacity: 1;
             }
         }
-        &--inside{
-            opacity: 0;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background: linear-gradient($color-primary, $color-secondary);
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
-            transition: opacity 200ms ease-in-out;
-        }
+    }
+    &-inside{
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: linear-gradient($color-primary, $color-secondary);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        transition: opacity 200ms ease-in-out;
     }
 }
