--- a/scss/layouts/_layouts.scss
+++ b/scss/layouts/_layouts.scss
@@ -4,12 +4,15 @@
     display: flex;
     justify-content: center;
     box-shadow: 0 1px 6px $box-shadow;
-    @media screen and (min-width: 992px){
-        justify-content: flex-start;
-    }
     &__logo{
-        margin: 1.5em;
+        margin: 1.5em 1.5em 1em 1.5em;
         width: 15em;
+    }
+    &__return-icon{
+        font-size: 1.8em;
+        position: absolute;
+        left: 1em;
+        top: calc(50% - .4em);
     }
 }
 
@@ -50,23 +53,6 @@
             font-size: 1.3em;
             @media screen and (min-width: 768px){
                 padding-left: 0;
-            }
-        }
-        &-btn{
-            margin: 1em;
-            font-size: 1.1em;
-            color: white;
-            border-radius: 2.5em;
-            padding: 1em 1.5em;
-            display: block;
-            width: max-content;
-            background: linear-gradient($color-secondary, $color-primary);
-            box-shadow: 0 3px 5px $box-shadow;
-            @media screen and (min-width: 768px){
-                margin-left: 0;
-            }
-            &:hover{
-                cursor: pointer;
             }
         }
     }
