--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,50 @@
     transform: rotate(360deg);
   }
 }
+@-webkit-keyframes body-fade-in {
+  100% {
+    overflow: auto;
+  }
+}
+@keyframes body-fade-in {
+  100% {
+    overflow: auto;
+  }
+}
+@-webkit-keyframes loading-fade-out {
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
+}
+@keyframes loading-fade-out {
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
+}
+@-webkit-keyframes spinner-rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes spinner-rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes shop-fade-in {
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes shop-fade-in {
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 /*-- Propriétés générales --*/
 * {
   box-sizing: border-box;
@@ -41,6 +85,7 @@ html {
 }
 
 body {
+  background: white;
   max-width: 1900px;
   margin: auto;
 }
@@ -79,6 +124,32 @@ button {
   font-weight: 900;
 }
 
+.body-fade-in {
+  position: relative;
+  overflow: hidden;
+  -webkit-animation: body-fade-in 0ms 1000ms forwards;
+          animation: body-fade-in 0ms 1000ms forwards;
+}
+
+.loading {
+  z-index: 2;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: white;
+  -webkit-animation: loading-fade-out 500ms 1000ms ease-in-out forwards;
+          animation: loading-fade-out 500ms 1000ms ease-in-out forwards;
+}
+.loading__spinner {
+  width: 6em;
+  margin: calc(50vh - 3em) calc(50vw - 3em);
+  transform-origin: center center;
+  -webkit-animation: spinner-rotate 900ms linear infinite;
+          animation: spinner-rotate 900ms linear infinite;
+}
+
 .btn {
   margin: 1em;
   font-size: 1.1em;
@@ -100,65 +171,15 @@ button {
 }
 .btn:hover {
   cursor: pointer;
+  box-shadow: 0 5px 7px #b8b8b8;
+  background: linear-gradient(#ff83dd, #985ede);
 }
 .btn--menu {
   margin: 3em auto 1em;
-  width: 12em;
-}
-
-.card {
-  position: relative;
-  flex: 1 0 45%;
-  min-width: 21em;
-  height: 20em;
-}
-@media screen and (min-width: 992px) {
-  .card {
-    flex: 1 0 21em;
-    max-width: calc(33.3% - 1em);
-  }
-}
-.card__link {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  box-shadow: 0 2px 10px #d2d2d2;
-  background: white;
-  border-radius: 1.3em;
-  display: flex;
-  flex-direction: column;
-}
-.card__link-img {
-  border-radius: 1.3em 1.3em 0 0;
-  -o-object-fit: cover;
-     object-fit: cover;
-  width: 100%;
-  height: 70%;
-}
-.card__link-info {
-  flex-grow: 1;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.card__link-info-text {
-  margin-left: 1em;
-}
-.card__link-info-text-title {
-  font-size: 1.4em;
-}
-.card__link-info-text-location {
-  margin-top: 0.5em;
-  font-size: 1.3em;
-}
-.card__link-new {
-  position: absolute;
-  top: 1em;
-  right: 1em;
-  background: #99e2d0;
-  color: #008766;
-  padding: 0.5em 0.8em;
-  font-size: 1.2em;
+  width: 40%;
+  min-width: -webkit-max-content;
+  min-width: -moz-max-content;
+  min-width: max-content;
 }
 
 .heart {
@@ -176,7 +197,7 @@ button {
   right: 0;
   margin-right: 1em;
 }
-.heart-outside {
+.heart__outside {
   z-index: 1;
   position: absolute;
   top: 0;
@@ -184,13 +205,13 @@ button {
   color: #3d3d3d;
   transition: opacity 200ms ease-in-out;
 }
-.heart-outside:hover {
+.heart__outside:hover {
   opacity: 0;
 }
-.heart-outside:hover + i {
+.heart__outside:hover + i {
   opacity: 1;
 }
-.heart-inside {
+.heart__inside {
   opacity: 0;
   position: absolute;
   top: 0;
@@ -346,6 +367,74 @@ button {
   row-gap: 2em;
 }
 
+.card {
+  position: relative;
+  flex: 1 0 45%;
+  min-width: 21em;
+  height: 20em;
+}
+@media screen and (min-width: 992px) {
+  .card {
+    flex: 1 0 21em;
+    max-width: calc(33.3% - 1em);
+  }
+}
+.card__link {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 2px 10px #d2d2d2;
+  background: white;
+  border-radius: 1.3em;
+  display: flex;
+  flex-direction: column;
+}
+.card__link:hover {
+  box-shadow: 0 6px 12px #d2d2d2;
+  color: #3d3d3d;
+}
+.card__link:hover img {
+  opacity: 0.9;
+}
+.card__link:hover + .heart .heart__outside {
+  color: #707070;
+}
+.card__link-img {
+  border-radius: 1.3em 1.3em 0 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 70%;
+}
+.card__link-info {
+  flex-grow: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.card__link-info-text {
+  margin-left: 1em;
+}
+.card__link-info-text-title {
+  font-size: 1.4em;
+}
+.card__link-info-text-location {
+  margin-top: 0.5em;
+  font-size: 1.3em;
+}
+.card__link-new {
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  background: #99e2d0;
+  color: #008766;
+  padding: 0.5em 0.8em;
+  font-size: 1.2em;
+}
+.card__link-new-text {
+  line-height: 1;
+}
+
 .footer {
   background-color: #353535;
   padding: 2em 1.5em;
@@ -421,6 +510,29 @@ button {
   box-shadow: 0 2px 10px #d2d2d2;
   overflow: hidden;
   display: flex;
+  opacity: 0;
+  transform: translateY(1em);
+}
+@media (min-width: 447px) {
+  .shop-card {
+    max-width: calc(50% - .5em);
+  }
+}
+.shop-card:nth-child(1) {
+  -webkit-animation: shop-fade-in 800ms 150ms ease-out forwards;
+          animation: shop-fade-in 800ms 150ms ease-out forwards;
+}
+.shop-card:nth-child(2) {
+  -webkit-animation: shop-fade-in 800ms 300ms ease-out forwards;
+          animation: shop-fade-in 800ms 300ms ease-out forwards;
+}
+.shop-card:nth-child(3) {
+  -webkit-animation: shop-fade-in 800ms 450ms ease-out forwards;
+          animation: shop-fade-in 800ms 450ms ease-out forwards;
+}
+.shop-card:nth-child(4) {
+  -webkit-animation: shop-fade-in 800ms 600ms ease-out forwards;
+          animation: shop-fade-in 800ms 600ms ease-out forwards;
 }
 .shop-card:hover {
   cursor: pointer;
