--- a/scss/layouts/_layouts.scss
+++ b/scss/layouts/_layouts.scss
@@ -1,3 +1,4 @@
+
 .header{
     position: relative;
     z-index: 1;
@@ -131,6 +132,71 @@
         flex-wrap: wrap;
         column-gap: 2em;
         row-gap: 2em;
+    }
+}
+
+.card{
+    position: relative;
+    flex: 1 0 45%;
+    min-width: 21em;
+    height: 20em;
+    @media screen and (min-width: 992px){
+        flex: 1 0 21em;
+        max-width: calc(33.3% - 1em);
+    }
+    &__link{
+        position: relative;
+        width: 100%;
+        height: 100%;
+        box-shadow: 0 2px 10px lighten($box-shadow, 10%);
+        background: white;
+        border-radius: $card-border;
+        display: flex;
+        flex-direction: column;
+        &:hover{
+            box-shadow: 0 6px 12px lighten($box-shadow, 10%);
+            color: #3d3d3d;
+            & img{
+                opacity: .9;
+            }
+            & + .heart .heart__outside{
+                color: lighten(#3d3d3d, 20%);
+            }
+        }
+        &-img{
+            border-radius: $card-border $card-border 0 0;
+            object-fit: cover;
+            width: 100%;
+            height: 70%;
+        }
+        &-info{
+            flex-grow: 1;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            &-text{
+                margin-left: 1em;
+                &-title{
+                    font-size: 1.4em;
+                }
+                &-location{
+                    margin-top: .5em;
+                    font-size: 1.3em;
+                }
+            }
+        }
+        &-new{
+            position: absolute;
+            top: 1em;
+            right: 1em;
+            background: #99e2d0;
+            color: #008766;
+            padding: .5em .8em;
+            font-size: 1.2em;
+            &-text{
+                line-height: 1;
+            }
+        }
     }
 }
 
