--- a/css/style.css
+++ b/css/style.css
@@ -32,15 +32,21 @@
   }
 }
 @-webkit-keyframes loading-fade-out {
-  100% {
+  99% {
     opacity: 0;
-    z-index: -1;
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
   }
 }
 @keyframes loading-fade-out {
-  100% {
+  99% {
     opacity: 0;
-    z-index: -1;
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
   }
 }
 @-webkit-keyframes spinner-rotate {
@@ -125,7 +131,6 @@ button {
 }
 
 .body-fade-in {
-  position: relative;
   overflow: hidden;
   -webkit-animation: body-fade-in 0ms 1000ms forwards;
           animation: body-fade-in 0ms 1000ms forwards;
@@ -519,20 +524,20 @@ button {
   }
 }
 .shop-card:nth-child(1) {
-  -webkit-animation: shop-fade-in 800ms 150ms ease-out forwards;
-          animation: shop-fade-in 800ms 150ms ease-out forwards;
+  -webkit-animation: shop-fade-in 800ms 500ms ease-out forwards;
+          animation: shop-fade-in 800ms 500ms ease-out forwards;
 }
 .shop-card:nth-child(2) {
-  -webkit-animation: shop-fade-in 800ms 300ms ease-out forwards;
-          animation: shop-fade-in 800ms 300ms ease-out forwards;
+  -webkit-animation: shop-fade-in 800ms 650ms ease-out forwards;
+          animation: shop-fade-in 800ms 650ms ease-out forwards;
 }
 .shop-card:nth-child(3) {
-  -webkit-animation: shop-fade-in 800ms 450ms ease-out forwards;
-          animation: shop-fade-in 800ms 450ms ease-out forwards;
+  -webkit-animation: shop-fade-in 800ms 800ms ease-out forwards;
+          animation: shop-fade-in 800ms 800ms ease-out forwards;
 }
 .shop-card:nth-child(4) {
-  -webkit-animation: shop-fade-in 800ms 600ms ease-out forwards;
-          animation: shop-fade-in 800ms 600ms ease-out forwards;
+  -webkit-animation: shop-fade-in 800ms 950ms ease-out forwards;
+          animation: shop-fade-in 800ms 950ms ease-out forwards;
 }
 .shop-card:hover {
   cursor: pointer;
