--- a/scss/utils/_keyframes.scss
+++ b/scss/utils/_keyframes.scss
@@ -17,9 +17,12 @@
 }
 
 @keyframes loading-fade-out{
-    100%{
+    99%{
         opacity: 0;
-        z-index: -1;
+        transform: scale(1);
+    }
+    100%{
+        transform: scale(0);
     }
 }
 
