--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -5,5 +5,8 @@ $color-tertiary: #99E2D0;
 
 $box-shadow: rgb(184, 184, 184);
 $bg: #f6f6f6;
+
 $card-border: 1.3em;
+
 $loading-duration: 1000ms;
+$heart-duration: 200ms;
