--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -3,6 +3,6 @@
     animation: shop-fade-in 800ms $delay ease-out forwards;
 }
 
-@mixin heart-fill($delay:$heart-duration){
-    transition: opacity $delay ease-in-out;
+@mixin heart-fill($duration:$heart-duration){
+    transition: opacity $duration ease-in-out;
 }
