--- a/scss/layouts/_layouts.scss
+++ b/scss/layouts/_layouts.scss
@@ -5,6 +5,9 @@
     display: flex;
     justify-content: center;
     box-shadow: 0 1px 6px $box-shadow;
+    &--menu{
+        box-shadow: 0 1px 6px darken($box-shadow, 20%);
+    }
     &__logo{
         margin: 1.5em 1.5em 1em 1.5em;
         width: 15em;
@@ -142,7 +145,7 @@
     height: 20em;
     @media screen and (min-width: 992px){
         flex: 1 0 21em;
-        max-width: calc(33.3% - 1em);
+        max-width: calc(33.3% - 1.5em);
     }
     &__link{
         position: relative;
@@ -208,6 +211,10 @@
     }
     &__list{
         margin-top: 1em;
+        @media screen and (min-width: 768px){
+            display: flex;
+            column-gap: 1.8em;
+        }
         &-link{
             color: white;
             font-size: 1.3em;
@@ -215,6 +222,9 @@
             &-icon{
                 margin-right: 1em;
                 width: .5em;
+            }
+            &:hover{
+                color: rgb(218, 218, 218);
             }
         }
     }
