--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -8,7 +8,11 @@ $bg: #f6f6f6;
 
 $card-border: 1.3em;
 
-$loading-duration: 1000ms;
+$spinner-duration: 900ms;
+$loading-duration: 500ms;
 $heart-duration: 200ms;
+$shop-duration: 800ms;
+$check-duration: 450ms;
 
+$loading-delay: 1000ms;
 $shop-delay: 700ms;
